# theory-graph-work

./: CMakeLists.txt  README.md  main.cpp  run_many_instances.txt
Entrega/: main.cpp
Entrega/src/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h
Entrega/src/managers/: FileManager.cpp  FileManager.h  MenuManager.cpp
inputs/: djikstra.txt  djikstra2.txt  dominant-set.txt  kruskal.txt  prim.txt  sample.txt
outputs/: graph.txt  guloso.txt  kruskal.txt  randomizado.txt
src/: Edge.cpp  Edge.h  FileManager.cpp  FileManager.h  Graph.cpp  Graph.h  MenuManager.cpp  Node.cpp  Node.h
src/files/: FileManager.cpp  FileManager.h
src/managers/: FileManager.cpp  FileManager.h  MenuManager.cpp  MenuManager.h
